--- a/styles.css
+++ b/styles.css
@@ -1,783 +1,209 @@
 @font-face {
-    font-family: Fahkwang-Light;
-    src: url(FahkwangLight.ttf);
+  font-family: Graphik-Light;
+  src: url(GraphikLight.otf);
 }
 
 @font-face {
-    font-family: Fahkwang-Regular;
-    src: url(FahkwangRegular.ttf);
+  font-family: Graphik-Regular;
+  src: url(GraphikRegular.otf);
 }
 
 @font-face {
-    font-family: Fahkwang-Medium;
-    src: url(FahkwangMedium.ttf);
+  font-family: Graphik-Semi;
+  src: url(GraphikSemibold.otf);
 }
 
 @font-face {
-    font-family: Graphik-Light;
-    src: url(GraphikLight.otf);
-}
-
-@font-face {
-    font-family: Graphik-Regular;
-    src: url(GraphikRegular.otf);
-}
-
-@font-face {
-    font-family: Graphik-Semibold;
-    src: url(GraphikSemibold.otf);
+  font-family: Graphik-Bold;
+  src: url(GraphikBold.otf);
 }
 
 * { 
-    font-family: Graphik-Light;
-    color: #312C30;
-    font-size: 20px
+  font-family: Graphik-Light;
+  color: #000000;
+  font-size: 20px;
+}
+
+#semibold {
+  font-family: Graphik-Semi;
+}
+
+#bold {
+  font-family: Graphik-Bold;
+}
+
+body, .content {
+  width: 90%;
+  margin-right: auto;
+  margin-left: auto;
+  padding-bottom: 36px;
+  /* border: solid 3px; */
+}
+
+footer .nav-left, footer .nav-right {
+  padding-top: 64px;
+  padding-bottom: 64px;
+}
+
+footer p, footer a {
+  color: #EB7956;
+}
+
+h1 {
+  font-family: Graphik-Semi;
+  font-size: 64px;
+  color: #E1A25D;
+}
+
+h2 {
+  font-family: Graphik-Semi;
+  font-size: 48px;
+}
+
+h3 {
+  font-family: Graphik-Bold;
+  font-size: 28px;
+}
+
+h4 {
+  font-family: Graphik-Semi;
+  font-size: 28px;
+}
+
+h5 {
+  margin-top: -16px;
+  font-size: 36px;
 }
 
 /* NAVIGATION BAR STYLING */
 nav {
-    height: 10vh;
-    width: 90%;
-    margin-right: auto;
-    margin-left: auto;
-    padding-top: 3%;
+  height: 10vh;
+  width: 90%;
+  margin-right: auto;
+  margin-left: auto;
 }
 
-nav a {
-    font-size: 18px;
-    color: #312C30;
-    text-decoration: none;
-    font-weight: 600;
+.nav-left {
+  float: left;
+  width: 50%;
 }
 
-#kuramoto {
-    float: left;
+.nav-right {
+  float: right;
+  width: 50%;
 }
 
-#about {
-    float: right;
+.nav-right-item {
+  padding-left: 36px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  float: right;
+  text-decoration: none;
 }
 
-/* HOME PAGE -- BODY CONTENT STYLING */
-h1 {
-    /* font-family: 'Fahkwang', sans-serif; */
-    font-family: Fahkwang-Regular;
-    /* font-weight: 600; */
-    font-size: 72px;
-    /* color: #7B9741; */
+.nav-left-item {
+  padding-top: 24px;
+  padding-bottom: 24px;
+  float: left;
+  text-decoration: none;
 }
 
-.content {
-    width: 90%;
-    margin-left: auto;
-    margin-right: auto;
+/* BODY STYLING */
+#recent-work {
+  width: 80%;
+  /* outline: 1px solid; */
+  margin-right: auto;
+  margin-left: auto;
 }
 
-#description {
-    font-size: 24px;
+.thumbnail-large {
+  width: 100%;
+  height: auto;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  /* border: 1px solid black; */
 }
 
-#casestudy {
-    border: none;
-    border-radius: 10px;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
+#thumbnail-cover {
+  margin-left: 100px;
+  margin-top: 30px;
 }
 
-#info {
-    width: 48%;
-    padding-right: 1%;
-    float: left;
+/* ABOUT STYLING */
+#about-who, #about-how, #about-where {
+  width: 30%;
+  padding: 16px;
+  float: left;
 }
 
-#portfolio {
-    width: 48%;
-    padding-right: 1%;
-    float: left;
-    overflow-y: scroll;
-    height: 55vh;
-    scroll-snap-type: y mandatory;
+/* COSTAR STYLING */
+.thumbnail-casestudy {
+  height: 90vh;
+  /* outline: 2px solid; */
+  margin-left: auto;
+  margin-right: auto;
 }
 
-#portfolio::-webkit-scrollbar {
-    display: none; 
+.thumbnail-casestudy img {
+  width: 100%;
+  height: auto;
+  /* border: 2px solid; */
 }
 
-#portfolio img {
-    max-width: 95%;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    padding-left: 2%;
-    scroll-snap-align: start;
+.casestudy-content {
+  margin-left: auto;
+  margin-right: auto;
 }
 
-#indicator {
-    width: 2%;
-    float: right;
+
+.casestudy-component {
+  float: left;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-#sellinglater-indicator, 
-#xpresso-indicator, 
-#dailydetour-indicator, 
-#tartordle-indicator, 
-#dei-indicator {
-    border-radius: 25px;
-    background: #BBBCBC;
-    padding: 3px; 
-    width: 4px;
-    height: 16px; 
+.casestudy-component img {
+  width: 90%;
+  height: auto;
+  padding: 24px;
+  display: block;
+} 
+
+.component-left, .component-right {
+  width: 48%;
+  padding-left: 16px;
+  float: left;
+  /* border: 2px solid; */
 }
 
-@keyframes slideInLeft {
-    0% {
-      transform: translateX(-100%);
-    }
-    50% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(100%);
-    }
-}
-
-/* ABOUT PAGE -- BODY CONTENT STYLING */
-h2 {
-    /* font-family: 'Fahkwang', sans-serif;
-    font-weight: bold; */
-    font-family: Fahkwang-Regular;
-    font-size: 72px;
-    color: #312C30;
-}
-
-#bio {
-    width: 100%;
-    height: 90vh;
-}
-
-#bio-img {
-    width: 32%;
-    float: left;
-}
-
-#bio-text {
-    width: 58%;
-    float: right;
-    font-size: 18px;
-}
-
-#work {
-    width: 60%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#work {
-    border-left: 2px solid #312C30;
-}
-
-#work table {
-    position: relative;
-}
-
-#work td {
-    padding-bottom: 60px;
-    padding-left: 20px;
-}
-
-.timeline {
-    border-radius: 25px;
-    background: #BBBCBC;
-    padding: 3px; 
-    width: 12px;
-    height: 4px; 
-    position: relative;
-    left: -33px;
-    bottom: -28px;
-}
-
-.date {
-    font-size: 14px;
-}
-
-.company {
-    /* font-family: 'Fahkwang', sans-serif; */
-    font-family: Fahkwang-Regular;
-    font-size: 32px;
-}
-
-.job {
-    font-size: 18px;
-    font-style: italic;
-}
-
-.about-description {
-    font-size: 16px;
-}
-
-#costar .timeline {
-    background: #2152A1;
-}
-
-#costar .company {
-    color: #2152A1;
-}
-
-#onecommons .timeline {
-    background: #62B6EA;
-}
-
-#onecommons .company {
-    color: #62B6EA;
-}
-
-#csacademy .timeline {
-    background: #5E54DF;
-}
-
-#csacademy .company {
-    color: #5E54DF;
-}
-
-#cmu .timeline {
-    background: #A6192E;
-}
-
-#cmu .company {
-    color: #A6192E;
-}
-
-/* CASE PAGE -- BODY CONTENT STYLING */
-.case-menu {
-    width: 25%;
-    float: left;
-    position: -webkit-sticky; /* Safari */
-    position: sticky;
-    top: 0;
-}
-
-.case-menu li a {
-    font-family: Graphik-Regular;
-}
-
-.case-menu li {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    position: relative;
-    left: -40px;
-    list-style: none;
-    font-size: 18px;
-}
-
-.case-menu a {
-    text-decoration: none;
-}
-
-#case-description {
-    padding-top: 50px;
-    padding-bottom: 50px;
-    width: 70%;
-    float: left;
-}
-
-#case-description h3 {
-    /* font-family: 'Fahkwang', sans-serif; */
-    font-family: Fahkwang-Regular;
-    font-weight: 600;
-    font-size: 48px;
-    padding-bottom: 40px;
-}
-
-#case-description p, #case-description u {
-    font-size: 24px;
-    font-weight: 300;
-}
-
-#roles {
-    padding-top: 100px;
-    padding-bottom: 50px;
-    width: 30%;
-    float: left;
-}
-
-#roles h4 {
-    font-size: 24px;
-    font-weight: 500;
-    padding-left: 100px;
-    margin: 0px;
-}
-
-#roles p {
-    font-size: 24px;
-    font-weight: 300;
-    padding-left: 100px;
-    padding-bottom: 30px;
-}
-
-#prototype {
-    margin: auto;
-}
-
-#process {
-    width: 75%;
-    float: right;
-}
-
-.process-step {
-    font-size: 24px;
-    margin-bottom: 100px;
-    float: left;
-}
-
-.process-heading {
-    /* font-family: 'Fahkwang', sans-serif; */
-    font-family: Fahkwang-Regular;
-    font-size: 36px;
-    font-weight: 600;
-}
-
-.process-stat {
-    padding-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#stat {
-    font-size: 72px;
-    color: #7B9741;
-}
-
-#stat-description {
-    text-align: left;
-    padding-left: 10px;
-}
-
-#problems {
-    background-color: #F1F0F0;
-    border-radius: 25px;
-    width: 36%;
-    float: left;
-    padding: 40px;
-}
-
-#problems ul, #solutions ul {
-    display: inline;
-}
-
-#solutions {
-    background-color: #F1F0F0;
-    border-radius: 25px;
-    width: 36%;
-    float: left;
-    padding: 40px;
-}
-
-#arrow {
-    display: inline;
-    width: 5%;
-    height: 5%;
-    padding-left: 10px;
-    padding-right: 10px;
-    padding-top: 100px;
-    float: left;
-}
-
-#iterations-nav {
-    float: left;
-}
-
-#iterations-nav img {
-    max-width: 90%;
-    height: auto;
-}
-
-#iterations-nav p {
+.img-center {
     display: block;
-    font-weight: 500;
-    padding-top: 20px;
-}
-
-.iteration-subtitle {
-    font-size: 14px;
-    text-align: center;
-}
-
-.next-project {
-    width: 20%;
-    margin-right: auto;
-    margin-left: auto;
-    text-align: center;
-    margin-bottom: 100px;
-}
-
-.next-project p:nth-child(2) {
-    background-color: #F1F0F0;
-    border-radius: 15px;
-    padding: 20px;
-}
-
-.next-project-name {
-    /* font-family: 'Fahkwang', sans-serif; */
-    font-family: Fahkwang-Regular;
-    font-size: 30px;
-}
-
-#sellinglater-next {
-    color:#765E4F;
-}
-
-#xpresso-next {
-    color:#C3354A;
-}
-
-#tartordle-next {
-    color:#A6192E;
-}
-
-#dei-next {
-    color:#7B9741;
-}
-
-/* SELLING LATER PAGE -- BODY CONTENT STYLING */
-#sellinglater-left{
-    width: 100%;
-    height: 100vh;
-    background-color: #7B9741;
-    z-index: 1;
-    animation: 1.5s ease-out 0s 1 slideInLeft;
-}
-
-#sellinglater-title {
-    color: #F9F9F9;
-    padding-left: 100px;
-    font-size: 72px;
-
-}
-
-#sellinglater-cover {
-    position: relative;
-    top: -160px;
-    left: 550px;
-}
-
-#sellinglater-left nav a {
-    color: #F9F9F9;
-}
-
-#sellinglater-sitemap {
-    display: block;
-    padding: 20px;
-    max-width: 60%;
     margin-left: auto;
     margin-right: auto;
 }
 
-/* XPRESSO PAGE -- BODY CONTENT STYLING */
-#xpresso-left{
-    width: 100%;
-    height: 100vh;
-    background-color: #A38979;
-    z-index: 1;
-    animation: 1.5s ease-out 0s 1 slideInLeft;
+#costar-background, #sellinglater-background, #dailydetour-background {
+  padding-top: 72px;
 }
 
-#xpresso-title {
-    color: #FFFFFF;
-    padding-left: 200px;
-    font-size: 72px;
-
+#costar-lofi {
+  width: 45%;
 }
 
-#xpresso-cover {
-    position: relative;
-    left: 600px;
-    top: -100px;
+#grid-container {
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 24px;
+  padding: 24px;
+  align-items: center;
 }
 
-#xpresso-left nav a {
-    color: #FFFFFF;
+#dailydetour-solution3 {
+  width: 50%;
 }
 
-.process-changes {
-    table-layout: fixed;
-    width: 30%;
-    border-collapse: collapse;
-    float: left;
-    margin: 10px;
-}
-
-.process-changes th {
-    padding: 15px;
-    background: #F1F0F0;
-}
-
-.process-changes .design {
-    padding-top: 20px;
-    font-weight: 600;
-    vertical-align: text-top;
-    border-radius: 25px 25px 0 0;
-}
-
-.process-changes .page {
-    padding-bottom: 20px;
-}
-
-.process-changes .rationale {
-    font-size: 16px;
-    vertical-align: text-top;
-    border-radius:  0 0 25px 25px;
-}
-.design-guide-color {
-    color: #E6E5E0;
-    width: 20%;
-    padding-left: 40px;
-    padding-right: 40px;
-    padding-top: 60px;
-    padding-bottom: 60px;
-    
-}
-
-#dark-brown {
-    background-color: #361706;
-}
-
-#light-brown {
-    background-color: #7A5D4D;
-}
-
-#grey-brown {
-    background-color: #94877E;
-}
-
-#yellow {
-    background-color: #E1AF48;
-}
-
-#off-white {
-    color: #361706;
-    background-color: #E6E5E0;
-}
-
-.heuristic-evaluations {
-    width: 100%;
-    margin-top: 60px;
-    margin-bottom: 60px;
-}
-
-.heuristic-evaluations td {
-    width: 50%;
-}
-
-.heuristic-evaluations :nth-child(1) {
-    padding-bottom: 20px;
-}
-
-.evaluation {
-    font-weight: 500;
-}
-
-.solution {
-    vertical-align: text-top;
-}
-
-#xpresso-final {
-    max-width: 100%;
-    height: auto;
-}
-
-#xpresso-final:hover {
-    transform: scale(1.02);
-}
-
-#design-guide-title {
-    font-family: 'Sedgwick Ave', cursive;
-    font-size: 36px;
-    color: #361706;
-}
-
-#design-guide-subheading {
-    font-family: 'DM Sans', sans-serif;
-    font-size: 24px;
-    color: #361706;
-}
-
-#design-guide-body {
-    font-family: 'DM Sans', sans-serif;
-    font-size: 18px;
-    color: #361706;
-}
-
-/* TARTORDLE PAGE -- BODY CONTENT STYLING */
-#tartordle-left{
-    width: 100%;
-    height: 100vh;
-    background-color: #C3354A;
-    z-index: 1;
-    animation: 1.5s ease-out 0s 1 slideInLeft;
-}
-
-#tartordle-title {
-    color: #FFFFFF;
-    padding-left: 275px;
-    font-size: 72px;
-}
-
-#tartordle-cover {
-    position: relative;
-    top: -140px;
-    left: 620px;
-}
-
-#tartordle-left nav a {
-    color: #FFFFFF;
-}
-
-#tartordle-final {
-    max-width: 100%;
-    height: auto;
-}
-
-#tartordle-accesibility {
-    display: block;
-    padding: 20px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-/* DEI PAGE -- BODY CONTENT STYLING */
-#dei-left{
-    width: 100%;
-    height: 100vh;
-    background-color: #A6192E;
-    z-index: 1;
-    animation: 1.5s ease-out 0s 1 slideInLeft;
-}
-
-#dei-title {
-    color: #FFFFFF;
-    padding-left: 100px;
-    font-size: 72px;
-}
-
-#dei-cover {
-    position: relative;
-    top: -160px;
-    left: 650px;
-}
-
-#dei-left nav a {
-    color: #FFFFFF;
-}
-
-.dei-personas {
-    padding: 20px;
-    width: 28%;
-}
-
-#dei-design-img {
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;
-}
-
-.dei-design {
-    padding-left: 40px;
-    padding-right: 40px;
-    width: 35%;
-}
-
-#dei-final {
-    max-width: 90%;
-    height: auto;
-}
-#dei-final:hover  {
-    transform: scale(1.02);
-}
-
-/* DAILY DETOUR  PAGE -- BODY CONTENT STYLING */
-#dailydetour-left{
-    width: 100%;
-    height: 100vh;
-    background-color: #BBDEF1;
-    z-index: 1;
-    animation: 1.5s ease-out 0s 1 slideInLeft;
-}
-
-#dailydetour-title {
-    color: #01A5A6;
-    padding-top: 100px;
-    padding-left: 225px;
-    font-size: 72px;
-}
-
-#dailydetour-cover {
-    position: relative;
-    top: -180px;
-    left: 720px;
-}
-
-#tartordle-left nav a {
-    color: #312C30;
-}
-
-.research-methods {
-    background-color: #BBDEF1;
-    border-radius: 15px;
-    padding: 20px;
-}
-
-#detour-affinity {
-    max-width: 100%;
-    height: auto;
-}
-
-.detour-models {
-    width: 50%;
-    margin-right: auto;
-    margin-left: auto;
-}
-
-#detour-empathy, #detour-journey {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 30px;
-}
-
-.detour-solution {
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-#detour-detour, #detour-trips, #detour-forum {
-    max-width: 60%;
-    height: auto;
-    text-align: center;
-}
-
-#detour-problems, #detour-solutions {
-    background-color: #F1F0F0;
-    border-radius: 25px;
-    width: 46%;
-    float: left;
-    padding: 40px;
-}
-
-#detour-arrow {
-    float: left;
-    margin-top: 110px;
-    padding: 5px;
-}
-
-#carouselExampleControls {
-    max-width: 80%;
-    margin-right: auto;
-    margin-left: auto;
+.grid-container-play {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 24px;
 }
