--- a/styles.css
+++ b/styles.css
@@ -143,8 +143,16 @@ nav {
 }
 
 #thumbnail-cover {
-  margin-left: 100px;
-  margin-top: 30px;
+  max-width: 55vw;
+  height: auto;
+  /* margin-left: 100px; */
+  /* margin-top: 30px; */
+}
+
+.thumbnail-div {
+  display:
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* ABOUT STYLING */
