--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,21 @@
-@font-face {
-  font-family: Avenir-Black;
-  src: url(AvenirLTStd-Black.otf);
-}
-
-@font-face {
-  font-family: Avenir-Book;
-  src: url(AvenirLTStd-Book.otf);
-}
-
-@font-face {
-  font-family: Avenir-Roman;
-  src: url(AvenirLTStd-Roman.otf);
-}
-
-@font-face {
-  font-family: Avenir-Light;
-  src: url(AvenirLTStd-Light.ttf);
-}
-
-@font-face {
-  font-family: Diranista-Regular;
-  src: url(Diranista-Regular.otf);
-}
 
 * { 
-  font-family: Avenir-Light;
-  color: #000000;
-  font-size: 24px;
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 300; 
+  color: #2D2926;
+  font-size: 20px;
 }
 
-body, .content, #recent-work {
-  width: 85%;
+body, .content{
+  width: 90%;
   margin-right: auto;
   margin-left: auto;
-  padding-bottom: 36px;
-}
-
-#home-page img {
-  width: 55.93px;
-  height: 50px;
+  padding-bottom: 96px;
 }
 
 .bold {
-  font-family: Avenir-Black;
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 700;
 }
 
 footer {
@@ -52,68 +25,114 @@ footer .nav-left, footer .nav-right {
   padding-top: 64px;
   padding-bottom: 64px;
 }
-nav a {
-  font-family: Diranista-Regular;
-}
 
 a.nav-item-right:link , a.nav-item-left:link {
-  font-family: Diranista-Regular;
-  color: #000000;
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 200;
   text-decoration: underline;
 }
 
 a.nav-item-right:hover , a.nav-item-left:hover {
-  font-family: Diranista-Regular;
-  color: #EB7956;
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 200;
+  color: #8091F8;
   text-decoration: underline;
 }
 
 a.nav-item-right:hover , a.nav-item-left:hover {
-  font-family: Diranista-Regular;
-  color: #EB7956;
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 200;
+  color: #8091F8;
   text-decoration: none;
 }
 
 footer p, footer a {
-  font-family: Diranista-Regular;
   color: #BFD683;
 }
 
-h1 {
-  font-family: Diranista-Regular;
-  text-transform: uppercase;
-  font-size: 96px;
-  margin-top: -32px;
-  position: relative;
-  display: inline-block;
+/* -------------------------------------------------------------------------- */
+/* HOMEPAGE STYLING */
+/* -------------------------------------------------------------------------- */
+
+#homepage p#title {
+  font-size: 64px;
+  font-weight: 900;
+  text-align: left;
 }
 
-h1#designer span {
-  font-family: Diranista-Regular;
-  text-transform: uppercase;
-  font-size: 96px;
-  margin-top: -32px;
+#homepage p.info {
+  font-size: 32px;
+  font-weight: 300;
+  text-align: left;
+}
+
+#designer-ul {
+  font-size: 64px;
+  font-weight: 900;
+  text-align: left;
   position: relative;
   z-index: 1;
 }
 
-h1#designer span::after {
-  font-family: Diranista-Regular;
-  text-transform: uppercase;
-  font-size: 96px;
-  /* margin-top: -32px; */
+#designer-ul::after {
+  font-size: 64px;
+  font-weight: 900;
+  text-align: left;
   content: "";
   position: absolute;
   left: 0;
-  bottom: 20px;
+  bottom: 8px;
   width: 100%;
-  height: 24px;
+  height: 22px;
   background-color: #BFD683;
   z-index: -1;
 }
 
-h1#developer span {
-  font-family: Diranista-Regular;
+#college-ul {
+  font-size: 32px;
+  font-weight: 500;
+  text-align: left;
+  position: relative;
+  z-index: 1;
+}
+
+#college-ul::after {
+  font-size: 32px;
+  font-weight: 500;
+  text-align: left;
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 2px;
+  width: 100%;
+  height: 12px;
+  background-color: #D83F59;
+  z-index: -1;
+}
+
+#company-ul {
+  font-size: 32px;
+  font-weight: 500;
+  text-align: left;
+  position: relative;
+  z-index: 1;
+}
+
+#company-ul::after {
+  font-size: 32px;
+  font-weight: 500;
+  text-align: left;
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 2px;
+  width: 100%;
+  height: 12px;
+  background-color: #78D5E4;
+  z-index: -1;
+}
+
+h1#designer span {
   text-transform: uppercase;
   font-size: 96px;
   margin-top: -32px;
@@ -121,59 +140,58 @@ h1#developer span {
   z-index: 1;
 }
 
-h1#developer span::after {
-  font-family: Diranista-Regular;
-  text-transform: uppercase;
-  font-size: 96px;
-  /* margin-top: -32px; */
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 20px;
-  width: 100%;
-  height: 24px;
-  background-color: #E1AF48;
-  z-index: -1;
+h2{
+  font-size: 32px;
+  font-weight: 700; 
+  text-align: left;
 }
 
-h1#diver span {
-  font-family: Diranista-Regular;
-  text-transform: uppercase;
-  font-size: 96px;
-  margin-top: -32px;
-  position: relative;
-  z-index: 1;
+.h2-unbold {
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 300;
+  font-size: 32px;
 }
 
-h1#diver span::after {
-  font-family: Diranista-Regular;
-  text-transform: uppercase;
-  font-size: 96px;
-  /* margin-top: -32px; */
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 20px;
-  width: 100%;
-  height: 24px;
-  background-color: #8091F8;
-  z-index: -1;
+h4{
+  font-family: 'DM Sans', sans-serif;
+  font-weight: 700;
+  font-size: 40px;
+  margin-bottom: 12px;
 }
 
-h2 {
-  font-family: Diranista-Regular;
+/* -------------------------------------------------------------------------- */
+/* CASE STUDY STYLING */
+/* -------------------------------------------------------------------------- */
+
+.casestudy-title h2 {
   font-size: 48px;
+  font-weight: 300;
   text-align: center;
-  position: relative;
-  display: inline-block;
 }
 
-.title {
+#amazon-ul {
+  font-size: 48px;
+  font-weight: 900;
   text-align: center;
+  position: relative;
+  z-index: 1;
+}
+
+#amazon-ul::after {
+  font-size: 48px;
+  font-weight: 900;
+  text-align: center;
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 6px;
+  width: 100%;
+  height: 16px;
+  background-color: #DD74F7;
+  z-index: -1;
 }
 
 #costar-underline {
-  font-family: Diranista-Regular;
   font-size: 48px;
   text-align: center;
   position: relative;
@@ -181,7 +199,6 @@ h2 {
 }
 
 #costar-underline::after {
-  font-family: Diranista-Regular;
   font-size: 48px;
   text-align: center;
   content: "";
@@ -195,7 +212,6 @@ h2 {
 }
 
 #zoo-underline {
-  font-family: Diranista-Regular;
   font-size: 48px;
   text-align: center;
   position: relative;
@@ -203,7 +219,6 @@ h2 {
 }
 
 #zoo-underline::after {
-  font-family: Diranista-Regular;
   font-size: 48px;
   text-align: center;
   content: "";
@@ -217,7 +232,6 @@ h2 {
 }
 
 #cui-underline {
-  font-family: Diranista-Regular;
   font-size: 48px;
   text-align: center;
   position: relative;
@@ -225,7 +239,6 @@ h2 {
 }
 
 #cui-underline::after {
-  font-family: Diranista-Regular;
   font-size: 48px;
   text-align: center;
   content: "";
@@ -238,65 +251,18 @@ h2 {
   z-index: -1;
 }
 
-#cafe23-underline {
-  font-family: Diranista-Regular;
-  font-size: 48px;
-  text-align: center;
-  position: relative;
-  z-index: 1;
-}
-
-#cafe23-underline::after {
-  font-family: Diranista-Regular;
-  font-size: 48px;
-  text-align: center;
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: 10px;
-  width: 100%;
-  height: 16px;
-  background-color: #8FA8CD;
-  z-index: -1;
-}
-
-h3 {
-  font-family: Diranista-Regular;
-  text-transform: uppercase;
-  font-size: 48px;
-}
-
-h4 {
-  font-family: Avenir-Black;
-  font-size: 32px;
-}
-
-h5 {
-  font-family: Avenir-Black;
-  font-size: 28px;
-}
-
-
-p {
-  font-family: Avenir-Light;
-  font-size: 24px;
-}
-
 p.header {
-  font-family: Avenir-Roman;
   font-size: 40px;
 }
 
 p.homepage-subtitle {
-  font-family: Avenir-Light;
   font-size: 28px;
   margin-top: -124px;
   color: black;
 }
 
 #homepage {
-  margin-top: 156px;
-  text-align: center;
+  margin-top: 128px;
 }
 
 /* NAVIGATION BAR STYLING */
@@ -351,7 +317,6 @@ div.grid-container {
   transform: translateX(16px) translateY(16px);
 }
 
-
 .grid-item div.thumbnail-container {
   padding: 10px;
   text-align: center;
@@ -403,20 +368,13 @@ div.back h4, div.back p {
   outline: 2px black solid;
 }
 
-#cafe23 div.back {
-  background-color: #E17B4A;
+#amazon div.back {
+  background-color: #42C8CF;
   top: 24px;
   left: 24px;
   text-align: center;
   padding-top: 254px;
   outline: 2px black solid;
-}
-
-/* BODY STYLING */
-#recent-work {
-  width: 80%;
-  margin-right: auto;
-  margin-left: auto;
 }
 
 .thumbnail-large {
@@ -438,7 +396,6 @@ div.back h4, div.back p {
   height: 90vh;
   margin-left: auto;
   margin-right: auto;
-
 }
 
 .thumbnail-casestudy img {
@@ -455,7 +412,6 @@ div.back h4, div.back p {
   float: left;
 }
 
-
 .casestudy-component {
   float: left;
   margin-left: auto;
@@ -470,11 +426,28 @@ div.back h4, div.back p {
   display: block;
 } 
 
-.component-left, .component-right {
-  width: 48%;
-  padding-left: 16px;
+.casestudy-component button {
+  background-color: #DD74F7; /* Background color */
+  color: black; /* Text color */
+  padding: 10px 20px; /* Padding */
+  border: 2px solid black; /* Remove border */
+  border-radius: 8px; /* Rounded corners */
+  cursor: pointer; /* Cursor style */
+} 
+
+.component-left{
+  width: 44.9%;
+  padding-right: 5%;
   float: left;
-  /* border: 2px solid; */
+}
+.component-right {
+  width: 44.9%;
+  padding-left: 5%;
+  float: left;
+}
+
+.component-text {
+  padding-left: 32px;
 }
 
 .img-center {
