--- a/styles.css
+++ b/styles.css
@@ -31,16 +31,15 @@
 
 * { 
   font-family: 'PPNikkeiMaru-Light';
-  /* font-weight: 300;  */
   color: #2D2926;
   font-size: 20px;
 }
 
 body, .content{
   width: 90%;
+  height: 80vh;
   margin-right: auto;
   margin-left: auto;
-  padding-bottom: 96px;
 }
 
 .bold {
@@ -84,7 +83,6 @@ h4{
   font-size: 24px;
 }
 
-
 /* -------------------------------------------------------------------------- */
 /* FOOTER STYLING */
 /* -------------------------------------------------------------------------- */
@@ -101,7 +99,7 @@ footer .nav-left, footer .nav-right {
 }
 
 footer p, footer a {
-  font-family: 'DM Sans', sans-serif;
+  font-family: 'PPNikkeiMaru-Light';
   color: #8091F8;
 }
 
@@ -248,6 +246,57 @@ h1#designer span {
   margin-top: -32px;
   position: relative;
   z-index: 1;
+}
+
+/* This is the start of new styling for v4 but within the homepage */
+
+#homepage p#intro {
+  font-size: 40px;
+}
+
+.blue-text {
+  color: #749BC7;
+  font-size: inherit;
+}
+
+.yellow-highlight {
+  font-size: inherit;
+  text-align: left;
+  position: relative;
+  z-index: 1;
+}
+
+.yellow-highlight::after {
+  font-size: inherit;
+  text-align: left;
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 8px;
+  width: 100%;
+  height: 24px;
+  background-color: #E5E75D;
+  z-index: -1;
+}
+
+.red-underline {
+  font-size: inherit;
+  text-align: left;
+  position: relative;
+  z-index: 1;
+}
+
+.red-underline::after {
+  font-size: inherit;
+  text-align: left;
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 2px;
+  width: 100%;
+  height: 2px;
+  background-color: #E18674;
+  z-index: -1;
 }
 
 /* -------------------------------------------------------------------------- */
