--- a/styles.css
+++ b/styles.css
@@ -32,11 +32,12 @@
 * { 
   font-family: 'PPNikkeiMaru-Light';
   color: #2D2926;
-  font-size: 20px;
+  font-size: 16px;
   line-height: 1.25;
 }
 
 body, .content{
+  background: #FDFDFD;
   width: 90%;
   margin-right: auto;
   margin-left: auto;
@@ -51,21 +52,16 @@ body, .content{
 }
 
 h1 {
-  font-size: 56px;
+  font-size: 32px;
   font-weight: 900;
   text-align: left;
   margin-bottom: -20px;
 }
 
-/* h2{
-  font-size: 32px;
-  font-weight: 700; 
-  text-align: left;
-} */
 h2 {
-  font-family: 'PPNikkeiMaru-Ultrabold', sans-serif;
+  font-family: 'PPNikkeiMaru', sans-serif;
   text-align: left;
-  font-size: 28px;
+  font-size: 24px;
 
 }
 .h2-unbold {
@@ -74,16 +70,9 @@ h2 {
 }
 
 h4{
-  font-family: 'DM Sans', sans-serif;
-  font-weight: 700;
-  font-size: 40px;
+  font-family: 'PPNikkeiMaru-Ultrabold', sans-serif;
+  font-size: 32px;
   margin-bottom: 12px;
-}
-
-.definition {
-  font-family: 'DM Sans', sans-serif;
-  font-weight: 300;
-  font-size: 24px;
 }
 
 /* -------------------------------------------------------------------------- */
@@ -97,7 +86,6 @@ footer {
 }
 
 footer .nav-left, footer .nav-right {
-  padding-top: 64px;
   padding-bottom: 64px;
 }
 
@@ -165,7 +153,7 @@ a.nav-item-right:hover , a.nav-item-left:hover {
 /* HOMEPAGE- BIO STYLING */
 /* -------------------------------------------------------------------------- */
 #homepage p#intro {
-  font-size: 40px;
+  font-size: 36px;
   height: 80vh;
 }
 
@@ -226,7 +214,7 @@ div.grid-container {
 }
 
 .grid-item {
-  padding-left: 24px;
+  padding-left: 96px;
   padding-bottom: 64px;
   text-align: center;
   height: 500px;
@@ -267,6 +255,7 @@ div.back h4, div.back p {
   left: 24px;
   text-align: center;
   padding-top: 254px;
+  padding-bottom: 24px;
   outline: 2px black solid;
 }
 
@@ -276,6 +265,7 @@ div.back h4, div.back p {
   left: 24px;
   text-align: center;
   padding-top: 254px;
+  padding-bottom: 24px;
   outline: 2px black solid;
 }
 
@@ -285,6 +275,7 @@ div.back h4, div.back p {
   left: 24px;
   text-align: center;
   padding-top: 254px;
+  padding-bottom: 24px;
   outline: 2px black solid;
 }
 
@@ -294,6 +285,7 @@ div.back h4, div.back p {
   left: 24px;
   text-align: center;
   padding-top: 254px;
+  padding-bottom: 24px;
   outline: 2px black solid;
 }
 
